login, tocken y localstorage

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,28 +1,19 @@
-html,
-body {
-  height: 100%;
-}
 html {
   display: table;
   margin: auto;
 }
 body {
-  display: table-cell;
-  vertical-align: middle;
-  background: #4ECDC4;
+  width: 50%;
+  margin: auto;
 }
 
 #login-page {
   width: 500px;
 }
 
-.card {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  -moz-transform: translate(-50%, -50%);
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  -o-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+input{
+  padding-left: 5px !important;
+  padding-right: 5px !important;
+
 }
+
