--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,38 +6,25 @@
       </div>
       <div class="row">
         <div class="input-field col s12">
-          <i class="material-icons prefix">mail_outline</i>
-          <input class="validate" id="email" type="email">
-          <label for="email" data-error="wrong" data-success="right">Email</label>
+          <i class="material-icons prefix">person</i>
+          <input  type="text" class="validate"  autocomplete="off" id="user">
+          <label for="user">Usuario</label>
         </div>
       </div>
       <div class="row">
         <div class="input-field col s12">
           <i class="material-icons prefix">lock_outline</i>
-          <input id="password" type="password">
-          <label for="password">Password</label>
-        </div>
-      </div>
-      <div class="row">
-        <div class="input-field col s12 m12 l12  login-text">
-          <input type="checkbox" id="remember-me" />
-          <label for="remember-me">Remember me</label>
+          <input id="password" autocomplete="off" type="password">
+          <label for="password">Contraseña</label>
         </div>
       </div>
       <div class="row">
         <div class="input-field col s12">
-          <a href="#" class="btn waves-effect waves-light col s12">Login</a>
+          <a (click)="login()" class="btn waves-effect waves-light col s12">Login</a>
         </div>
       </div>
-      <div class="row">
-        <div class="input-field col s6 m6 l6">
-          <input class="margin medium-small" (click)="login()"/>
-        </div>
-      </div>
-
     </form>
   </div>
 </div>
-
 </body>
 
