--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
+input :focus {
+  border-bottom: 10px solid #6E0000;
+}
