--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -3,9 +3,9 @@
     <a routerLink="/home" class="brand-logo">Digital Gourmet</a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
       <li><a routerLink="/home">Clientes</a></li>
-      <li><a routerLink="/body">Compras</a></li>
+      <li><a routerLink="/home">Compras</a></li>
       <li><a class="dropdown-trigger"  data-activates="dropdownAdm">Administración<i class="material-icons right">arrow_drop_down</i></a>
-      <li><a routerLink="/body">Reportes</a></li>
+      <li><a routerLink="/home">Reportes</a></li>
       <li><a class="dropdown-trigger"  data-activates="dropdown1"><i class="material-icons right">view_module</i></a>
       </li>
     </ul>
