--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -13,7 +13,7 @@
 
             <tbody>
             <tr class="rowGrid" *ngFor="let row of userList;  let i = index" (click)="setClickedRow(row)"
-                [class.active]="row.oid == selectedRow" >
+                [class.active]="row.oid == selectedRow">
               <td>{{ row.userName }}</td>
               <td>{{ row.creationUser }}</td>
               <td>{{ row.modificationUser }}</td>
@@ -22,54 +22,14 @@
           </table>
         </div>
         <div class=" card-action">
-          <a id="btnSave" (click)="userCrudModal.openModal()">Nuevo</a>
-          <a id="btnDelete" *ngIf="selectedRow !== null" (click)="delete()">Eliminar</a>
-          <a id="btnUpdate" *ngIf="selectedRow !== null" (click)="userCrudModal.openModal()">Modificar</a>
+          <button mz-button [flat]="true" (click)="new()">Nuevo</button>
+          <button mz-button [flat]="true" *ngIf="selectedRow !== null" (click)="update()">Modificar</button>
+          <button mz-button [flat]="true" *ngIf="selectedRow !== null" (click)="delete()">Eliminar</button>
           <a></a>
         </div>
       </div>
     </div>
   </div>
-
-  <div class="well well-lg">
-    Selected Row : <strong>{{selectedRow}}</strong>
-  </div>
-
 </div>
 
-<!-- Modal Trigger -->
-<div class="section">
-  <div class="row m-valign-wrapper">
-    <div class="col s12 m3">
-      <mz-modal #userCrudModal [options]="modalOptions">
-        <mz-modal-header>
-          <h4>Modal Title</h4>
-        </mz-modal-header>
-        <mz-modal-content>
-          <div class="row">
-            <form class="col s12">
-              <div class="row">
-                <div class="input-field col s6">
-                  <input [(ngModel)]="user.userName" [ngModelOptions]="{standalone:true}" id="userName" type="text"
-                         class="validate" required>
-                  <label for="userName">Nombre de Usuario</label>
-                </div>
-                <div class="input-field col s6">
-                  <i class="material-icons prefix">lock_outline</i>
-                  <input [(ngModel)]="user.password" [ngModelOptions]="{standalone:true}" id="password" name='password'
-                         autocomplete="off" type="password" required>
-                  <label for="password">Contraseña</label>
-                </div>
-              </div>
-            </form>
-          </div>
 
-        </mz-modal-content>
-        <mz-modal-footer>
-          <a (click)="save()" mz-modal-close>GUARDAR</a>
-          <a mz-modal-close>CANCELAR</a>
-        </mz-modal-footer>
-      </mz-modal>
-    </div>
-  </div>
-</div>
