--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,31 +1,30 @@
-<body ng-app="mainModule" ng-controller="mainController">
-<h3>Digital Gourmet</h3>
-<div id="login-page" class="row">
-  <div class="col s12 z-depth-6 card-panel">
-    <form class="login-form">
-      <div class="row">
-      </div>
-      <div class="row">
-        <div class="input-field col s12">
-          <i class="material-icons prefix">person</i>
-          <input  [(ngModel)]="userName"  name = 'userName' type="text" class="validate"  autocomplete="off" id="user" required>
-          <label for="user">Usuario</label>
-        </div>
-      </div>
-      <div class="row">
-        <div class="input-field col s12">
-          <i class="material-icons prefix">lock_outline</i>
-          <input [(ngModel)]="password" id="password"  name = 'password' autocomplete="off" type="password" required>
-          <label for="password">Contraseña</label>
-        </div>
-      </div>
-      <div class="row">
-        <div class="input-field col s12">
-          <a (click)="login()" class="btn waves-effect waves-light col s12">Login</a>
-        </div>
-      </div>
-    </form>
+<div class="container">
+  <div class="row">
+    <div class="col s6 offset-s3">
+      <mz-card class="mt-5 z-depth-5">
+        <mz-card-title>
+          <h4>Digital Gourmet</h4>
+        </mz-card-title>
+        <mz-card-content>
+          <mz-input-container>
+            <input mz-input
+                   [(ngModel)]="userName"
+                   type="text" [validate]="true"
+                   [label]="'Usuario'">
+          </mz-input-container>
+          <mz-input-container>
+            <input mz-input
+                   [(ngModel)]="password"
+                   type="password" [validate]="true"
+                   [label]="'Constraseña'">
+          </mz-input-container>
+        </mz-card-content>
+
+        <mz-card-action>
+          <button mz-button [flat]="true"  (click)="login()">Login</button>
+        </mz-card-action>
+      </mz-card>
+    </div>
   </div>
 </div>
-</body>
 
