--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,25 +1,25 @@
 <div class="container">
   <div class="row">
-    <div class="l8 col offset-l2">
+    <div class="col 10 offset-s2">
       <div class="card mt-5 z-depth-5">
         <div class="card-content ">
           <span class="card-title">Listado de usuarios</span>
-          <table class="centered responsive-table striped bordered table-container">
-            <thead>
-            <tr>
-              <th *ngFor="let row of displayedColumns"> {{row}}</th>
-            </tr>
-            </thead>
+              <table class="highlight centered responsive-table striped bordered table-container">
+                <thead>
+                <tr>
+                  <th *ngFor="let row of displayedColumns"> {{row}}</th>
+                </tr>
+                </thead>
 
-            <tbody>
-            <tr class="rowGrid" *ngFor="let row of userList;  let i = index" (click)="setClickedRow(row)"
-                [class.active]="row.oid == selectedRow">
-              <td>{{ row.userName }}</td>
-              <td>{{ row.creationUser }}</td>
-              <td>{{ row.modificationUser }}</td>
-            </tr>
-            </tbody>
-          </table>
+                <tbody>
+                <tr class="rowGrid" *ngFor="let row of userList;  let i = index" (click)="setClickedRow(row)"
+                    [class.active]="row.oid == selectedRow">
+                  <td>{{ row.userName }}</td>
+                  <td>{{ row.creationUser }}</td>
+                  <td>{{ row.modificationUser }}</td>
+                </tr>
+                </tbody>
+              </table>
         </div>
         <div class=" card-action">
           <button mz-button [flat]="true" (click)="new()">Nuevo</button>
