--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,12 +1,12 @@
 <div class="container">
   <div class="row">
-    <div class="col 10 offset-s1">
+    <div class="col s12 offset-s0  m12  l11  offset-l1  xl10 offset-xl1">
       <mz-card class="mt-5 z-depth-5">
         <mz-card-title>
           <h5>Listado de usuarios</h5>
         </mz-card-title>
         <mz-card-content>
-        <table class="highlight centered responsive-table striped bordered table-container">
+        <table class="highlight centered  striped bordered table-container">
           <thead>
           <tr>
             <th *ngFor="let row of displayedColumns"> {{row}}</th>
@@ -15,7 +15,7 @@
 
           <tbody>
           <tr class="rowGrid" *ngFor="let row of userList;  let i = index" (click)="setClickedRow(row)"
-              [class.active]="row.oid == selectedRow">
+              [class.active]="row.oid == selectedRow" [ngClass]="{'row-inactive': !row.isActive}">
             <td>{{ row.userName }}</td>
             <td>{{ row.creationUser }}</td>
             <td>{{ row.modificationUser }}</td>
@@ -32,7 +32,7 @@
                    [label]="'Ver inactivos'"
                    [filledIn]="true"
                    type="checkbox"
-                   [(ngModel)]="isChecked"
+                   [(ngModel)]="viewInactive"
                    (change)="viewElementActive()" >
           </mz-checkbox-container>
         </mz-card-action>
