--- a/src/app/components/user/user.component.scss
+++ b/src/app/components/user/user.component.scss
@@ -7,6 +7,10 @@
 }
 
 
+.crud-filte{
+  float: right;
+}
+
 .table-container tr.active td {
   background-color: rgba(25, 39, 48, 0.73) !important;
 }
