--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,32 +1,29 @@
 <div class="container">
   <div class="row">
-    <div class="col s12 offset-s0  m12  l11  offset-l1  xl10 offset-xl1">
-      <mz-card class="mt-5 z-depth-5">
+    <div class="col s12 offset-s0  m12 l11 offset-l1  xl10 offset-xl1">
+      <mz-card class="mt-3 z-depth-5">
         <mz-card-title>
-
           <div class="row">
-            <h5 class="col s6 m6">Listado de usuarios</h5>
-            <mz-input-container class="col s6 m6 crud-filter">
+            <h5 class="col s12 m6 ll6 xl6">Listado de usuarios</h5>
+            <mz-input-container class="col s12 m6 ll6 xl6 crud-filter">
               <i class="material-icons prefix">search</i>
               <input mz-input
                      [label]="'Filtrar'"
                      type="text"
-                     [(ngModel)]="filterInput"
-              >
+                     [(ngModel)]="filterInput">
             </mz-input-container>
           </div>
-
         </mz-card-title>
         <mz-card-content>
-          <table class="highlight centered  striped bordered table-container">
+          <table class="highlight centered striped bordered table-container">
             <thead>
             <tr>
               <th *ngFor="let row of displayedColumns"> {{row}}</th>
             </tr>
             </thead>
-
             <tbody>
-            <tr class="rowGrid" *ngFor="let row of userList | filter: filterInput;  let i = index" (click)="setClickedRow(row)"
+            <tr class="row-grid-crud" *ngFor="let row of userList | filter: filterInput;  let i = index"
+                (click)="setClickedRow(row)"
                 [class.active]="row.oid == selectedRow" [ngClass]="{'row-inactive': !row.isActive}">
               <td>{{ row.userName }}</td>
               <td>{{ row.creationUser }}</td>
@@ -38,7 +35,7 @@
         <mz-card-action>
           <button mz-button [flat]="true" (click)="new()">Nuevo</button>
           <button mz-button [flat]="true" *ngIf="selectedRow !== null" (click)="update()">Modificar</button>
-          <button mz-button [flat]="true" *ngIf="selectedRow !== null" (click)="delete()">Eliminar</button>
+          <button mz-button [flat]="true" *ngIf="selectedRow !== null && user.isActive" (click)="delete()">Eliminar</button>
           <mz-checkbox-container align="end">
             <input mz-checkbox
                    [label]="'Ver inactivos'"
