--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col s12 offset-s0  m12 l11 offset-l1  xl10 offset-xl1">
+    <div class="col s12 offset-s0  m12 l11 offset-l1 xl10 offset-xl1">
       <mz-card class="mt-3 z-depth-5">
         <mz-card-title>
           <div class="row">
@@ -26,18 +26,20 @@
                 (click)="setClickedRow(row)"
                 [class.active]="row.oid == selectedRow" [ngClass]="{'row-inactive': !row.isActive}">
               <td>{{ row.userName }}</td>
-              <td>{{ row.creationUser }}</td>
-              <td>{{ row.modificationUser }}</td>
+              <td>{{ row.name }}</td>
+              <td>{{ row.surname }}</td>
+              <td>{{ row.email }}</td>
             </tr>
             </tbody>
           </table>
         </mz-card-content>
         <mz-card-action>
-          <button mz-button [flat]="true" (click)="new()">Nuevo</button>
-          <button mz-button [flat]="true" *ngIf="selectedRow !== null" (click)="update()">Modificar</button>
-          <button mz-button [flat]="true" *ngIf="selectedRow !== null && user.isActive" (click)="delete()">Eliminar</button>
+          <button mz-button [flat]="true" [noWaves]="true"(click)="new()">Nuevo</button>
+          <button mz-button [flat]="true" [noWaves]="true" [disabled]="selectedRow === null" (click)="update()">Modificar</button>
+          <button mz-button [flat]="true" [noWaves]="true" [disabled]="selectedRow === null || !user.isActive"  (click)="delete()">Eliminar</button>
           <mz-checkbox-container align="end">
             <input mz-checkbox
+                   class="checkbox-crud"
                    [label]="'Ver inactivos'"
                    [filledIn]="true"
                    type="checkbox"
