--- a/src/app/components/user/user-internal-crud/user-internal-crud.component.html
+++ b/src/app/components/user/user-internal-crud/user-internal-crud.component.html
@@ -1,113 +1,24 @@
-<form [formGroup]="form" novalidate>
   <div class="section">
     <div class="row m-valign-wrapper">
-      <div class="col s12 m3">
+      <div class="col s12 m12">
         <mz-modal [options]="modalOptions">
           <mz-modal-header>
             <h4>Usuario</h4>
           </mz-modal-header>
           <mz-modal-content>
-            <div class="row">
-              <div class="col s10 offset-s1">
-                <div class="row">
-                  <div class="input-field col s12 m6 xl6">
-                    <mz-input-container>
-                      <input mz-input mz-validation required
-                             formControlName="userName"
-                             [errorMessageResource]="errorMessages.userName"
-                             id="userName"
-                             [(ngModel)]="user.userName"
-                             type="text" [validate]="true"
-                             [label]="'Nombre de usuario'">
-                    </mz-input-container>
-                  </div>
-
-                  <div *ngIf="!user.oid" class="input-field col s12 m6 xl6">
-                    <mz-input-container>
-                      <input mz-input mz-validation required
-                             formControlName="password"
-                             [errorMessageResource]="errorMessages.password"
-                             id="password"
-                             [(ngModel)]="user.password"
-                             type="password" [validate]="true"
-                             [label]="'Constraseña'"
-                      >
-                    </mz-input-container>
-                  </div>
-
-                  <div class="input-field col s12 m6 xl6">
-                    <mz-input-container>
-                      <input mz-input mz-validation required
-                             formControlName="name"
-                             [errorMessageResource]="errorMessages.name"
-                             id="name"
-                             [(ngModel)]="user.name"
-                             type="text" [validate]="true"
-                             [label]="'Nombre'">
-                    </mz-input-container>
-                  </div>
-
-                  <div class="input-field   col s12 m6 xl6">
-                    <mz-input-container>
-                      <input mz-input mz-validation required
-                             formControlName="surname"
-                             [errorMessageResource]="errorMessages.surname"
-                             id="surname"
-                             [(ngModel)]="user.surname"
-                             [label]="'Apellido'">
-                    </mz-input-container>
-                  </div>
-
-                  <div class="input-field col s12 m6 xl6">
-                    <mz-input-container>
-                      <input mz-input mz-validation required minlength="8" maxlength="8"
-                             formControlName="idCard"
-                             [errorMessageResource]="errorMessages.idCard"
-                             id="idCard"
-                             type="text"
-                             [label]="'DNI'"
-                             autocomplete="off"
-                             [(ngModel)]="user.idCard"
-                      >
-                    </mz-input-container>
-                  </div>
-
-                  <div class="input-field col s12 m6 xl6">
-                    <mz-input-container>
-                      <input mz-input mz-validation required
-                             formControlName="email"
-                             [errorMessageResource]="errorMessages.email"
-                             id="email"
-                             [(ngModel)]="user.email"
-                             type="email"
-                             id="options-input"
-                             [label]="'Email'"
-                             email="true"
-                      >
-                    </mz-input-container>
-                  </div>
-                  <div class="input-field col s12 m6 xl6">
-                    <mz-select-container>
-                      <select mz-select mz-validation required
-                              formControlName="gender"
-                              [errorMessageResource]="errorMessages.gender"
-                              id="gender"
-                              [(ngModel)]="user.gender"
-                              [label]="'Sexo'"
-                              [placeholder]="'Seleccione una opción'">
-                      >
-                        <option *ngFor="let gender of keys(genders)"
-                                [ngValue]="genders[gender]"
-                        >{{gender}}</option>
-                      </select>
-                    </mz-select-container>
-                  </div>
-                </div>
-              </div>
-            </div>
+            <mz-tab
+              [fixedTabWidth]="'true'"
+              [responsiveThreshold]="'true'"
+            >
+              <mz-tab-item [active]="'true'"
+                           [label]="'Datos Generales'">
+                <app-user-generaldata-tab [form]="form" [(user)]="user"></app-user-generaldata-tab>
+              </mz-tab-item>
+              <mz-tab-item  [label]="'Direcciones'">Tab 3</mz-tab-item>
+            </mz-tab>
           </mz-modal-content>
           <mz-modal-footer>
-            <button mz-button [disabled]="!form.valid" [flat]="true" (click)="save()" mz-modal-close>Guardar</button>
+            <button mz-button [flat]="true" (click)="save()" mz-modal-close>Guardar</button>
             <button *ngIf=" user.isActive !== undefined && !user.isActive" (click)="saveAndActive()" mz-button
                     [flat]="true" mz-modal-close>Activar y Guardar
             </button>
@@ -117,4 +28,3 @@
       </div>
     </div>
   </div>
-</form>
